--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=21w11a
-yarn_mappings=21w11a+build.3
-loader_version=0.11.3
+	# check these on https://fabricmc.net/versions.html
+	minecraft_version=1.17.1
+	yarn_mappings=1.17.1+build.14
+	loader_version=0.11.6
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -13,6 +13,4 @@ loader_version=0.11.3
 	archives_base_name = fabric-example-mod
 
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	#Fabric api
-	fabric_version=0.32.4+1.17
+	fabric_version=0.37.0+1.17
